<resources>
    <string name="app_name">Tutornite</string>
    <string name="sign_in">Sign In</string>
    <string name="email_address">Email Address</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="signup">Signup</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_your_email_address_to_retrieve_your_password">Enter your email address to retrieve your password</string>
    <string name="reset_password">Reset Password</string>
    <string name="name">Name</string>
    <string name="already_have_an_account">Already have an account? Sign In</string>
    <string name="password_must">Password must:\n - 8 characters\n - At least one lowercase letter (a-z)\n - At least one uppercase letter (A-Z)\n - At least one one number (0-9)</string>

    <string name="create_profile">Create Profile</string>
    <string name="rb_tutor">Tutor</string>
    <string name="rb_learner">Learner</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="dd_time">hh:mm</string>
    <string name="enter_payment_link">Enter Payment Link</string>
    <string name="payment_link">Payment Link</string>
    <string name="submit">Submit</string>
    <string name="select_your_skills">Select your skills</string>

    <string name="profile">Profile</string>
    <string name="user_name">User Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="college">College</string>
    <string name="skill_set">Skill Set</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="txt_terms_conditions">END USER LICENSE AGREEMENT \nLast updated February 15, 2023 \nTutornite is licensed to You (End-User) by Tutornite, for use only under the terms of this License Agreement. By downloading the Licensed Application from Android\'s software distribution platform (\"Play Store\"), and any update thereto (as permitted by this License Agreement), You indicate that You agree to be bound by all of the terms and conditions of this License Agreement, and that You accept this License Agreement. App Store is referred to in this License Agreement as \"Services.\" The parties of this License Agreement acknowledge that the Services are not a Party to this License Agreement and are not bound by any provisions or obligations with regard to the Licensed Application, such as warranty, liability, maintenance and support thereof. Tutornite, not the Services, is solely responsible for the Licensed Application and the content thereof. This License Agreement may not provide for usage rules for the Licensed Application that are in conflict with the latest Android Media Services Terms and Conditions (\"Usage Rules\"). Tutornite acknowledges that it had the opportunity to review the Usage Rules and this License Agreement is not conflicting with them. </string>

    <string name="search_learning_sessions">Search learning sessions</string>
    <string name="sorry_sessions_are_not_available">Sorry sessions are not available</string>
    <string name="sorry_tutors_are_not_available">Sorry tutors are not available</string>
    <string name="join">Join</string>
    <string name="apply">Apply</string>
    <string name="session_categories">Session Categories</string>
    <string name="cancel">Cancel</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="who_are_you">Who are you?</string>
    <string name="select_college">Select the college where you studied or currently studying</string>
    <string name="select_the_college">Select the college</string>
    <string name="update_profile">Update Profile</string>
    <string name="schedule_session">Schedule Session</string>
    <string name="session_title">Session Title</string>
    <string name="hint_session_title">Session Title</string>
    <string name="session_location">Session Location OR Remote meeting link</string>
    <string name="hint_session_location">Session Location OR Remote Link</string>
    <string name="session_details">Session Details</string>
    <string name="hint_session_details">Session Details</string>
    <string name="session_date">Session Date</string>
    <string name="select_category">Select Category</string>
    <string name="select_session_category">Select session category</string>
    <string name="session_details_screen">Session Details</string>
    <string name="btn_session_join">Join</string>
    <string name="session_time">Session Time</string>
    <string name="by_signing_up_you_re_agree_to_our_terms_amp_conditions"><![CDATA[By signing up, you\'re agree to our Terms & Conditions]]></string>
    <string name="posted_by_you">Posted By You</string>
    <string name="my_sessions">My Sessions</string>
    <string name="organised_sessions">Organised Sessions</string>
    <string name="delete_session">Delete Session</string>
    <string name="tutor_name">Tutor Name</string>
    <string name="totur_study">College where Tutor studied or currently studying</string>
    <string name="tutor_skills">Tutor Skills</string>
    <string name="donate_to_support">Donate to Support</string>
    <string name="tutor_details">Tutor Details</string>
    <string name="session_topic">Session Topic</string>
    <string name="session_organised_by">Session Organised By</string>
    <string name="session_date_amp_time"><![CDATA[Session Date & Time]]></string>
    <string name="progress">Progress</string>
    <string name="upcoming_sessions">Upcoming Sessions</string>
    <string name="sessions_attended">Sessions Attended</string>
    <string name="total_sessions">Total Sessions</string>
    <string name="zero">0</string>
    <string name="my_progress">My Progress</string>
    <string name="attended_click_here">Attended?\nClick here to confirm!</string>
    <string name="sessions_unattended">Non-attended Sessions</string>
    <string name="attendance_confirmed">Attendance confirmed</string>
    <string name="thankyou_confirmation">Thank you for your confirmation</string>
    <string name="notif_enabled_confirmation">Notification Enabled</string>
    <string name="notif_disabled_confirmation">Notification Disabled</string>
    <string name="try_again">Please try again.</string>
    <string name="no_apps_can_manage">No application can handle this request. Please install a web browser or check your URL.</string>
    <string name="cancelled_success">Cancelled successfully</string>
    <string name="session_delete">Session deleted successfully</string>
    <string name="joined_success">Joined successfully</string>
    <string name="appreciation_certificate">Appreciation Certificate</string>
    <string name="certificate_of_recognition">CERTIFICATE OF RECOGNITION</string>
    <string name="outstanding_teacher">Outstanding Teacher</string>
    <string name="this_certificate_is_awarded_to">This certificate is awarded to</string>
    <string name="for_exceptional_skills">for exceptional skill and performance in the field of teaching</string>
    <string name="date">Date</string>
    <string name="signature">Signature</string>
    <string name="share_certificate">Share Certificate</string>
    <string name="nav_settings_text">Settings</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="about_tutornite">About Tutornite</string>
    <string name="help_and_support">Help and Support</string>
    <string name="version_txt">Version 1.0.0</string>
    <string name="contact_tutors">Contact Tutors</string>
    <string name="contact_tutor_btn_txt">Contact</string>
</resources>