<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".activities.SessionCreateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@color/color_primary">

            <ImageView
                android:id="@+id/back_img"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_5sdp"
                android:padding="@dimen/_7sdp"
                android:src="@drawable/ic_back_arrow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/myriad_pro_bold"
                android:text="@string/schedule_session"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:fontFamily="@font/myriad_pro_semibold"
            android:text="@string/session_title"
            android:textColor="@color/color_primary"
            android:textSize="@dimen/_15sdp" />

        <EditText
            android:id="@+id/edt_session_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:background="@drawable/border"
            android:enabled="true"
            android:fontFamily="@font/myriad_pro_regular"
            android:hint="@string/hint_session_title"
            android:inputType="textPersonName"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:fontFamily="@font/myriad_pro_semibold"
            android:text="@string/session_location"
            android:textColor="@color/color_primary"
            android:textSize="@dimen/_15sdp" />

        <EditText
            android:id="@+id/edt_session_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:background="@drawable/border"
            android:enabled="true"
            android:fontFamily="@font/myriad_pro_regular"
            android:hint="@string/hint_session_location"
            android:inputType="textPersonName"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:fontFamily="@font/myriad_pro_semibold"
            android:text="@string/session_details"
            android:textColor="@color/color_primary"
            android:textSize="@dimen/_15sdp" />

        <EditText
            android:id="@+id/edt_session_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:background="@drawable/border"
            android:enabled="true"
            android:fontFamily="@font/myriad_pro_regular"
            android:hint="@string/hint_session_details"
            android:inputType="textPersonName"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:fontFamily="@font/myriad_pro_semibold"
            android:text="@string/session_date"
            android:textColor="@color/color_primary"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:id="@+id/txt_session_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:background="@drawable/border"
            android:fontFamily="@font/myriad_pro_regular"
            android:hint="@string/dd_mm_yyyy_time"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:fontFamily="@font/myriad_pro_semibold"
            android:text="@string/select_category"
            android:textColor="@color/color_primary"
            android:textSize="@dimen/_15sdp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/txt_selected_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:background="@drawable/border"
            android:fontFamily="@font/myriad_pro_regular"
            android:hint="@string/select_session_category"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp"
            android:visibility="visible" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:fontFamily="@font/myriad_pro_bold"
            android:padding="@dimen/_10sdp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textSize="@dimen/_15sdp" />
    </LinearLayout>


</ScrollView>