<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical"
    tools:context=".activities.SignInActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:background="@color/color_primary">

        <ImageView
            android:id="@+id/back_img"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:padding="@dimen/_7sdp"
            android:src="@drawable/ic_back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/myriad_pro_bold"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:fontFamily="@font/myriad_pro_semibold"
        android:text="@string/email_address"
        android:textColor="@color/color_primary"
        android:textSize="@dimen/_15sdp" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:background="@drawable/border"
        android:fontFamily="@font/myriad_pro_regular"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:fontFamily="@font/myriad_pro_semibold"
        android:text="@string/password"
        android:textColor="@color/color_primary"
        android:textSize="@dimen/_15sdp" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:background="@drawable/border"
        android:fontFamily="@font/myriad_pro_regular"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="8"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:fontFamily="@font/myriad_pro_bold"
        android:padding="@dimen/_10sdp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textSize="@dimen/_15sdp" />

    <TextView
        android:id="@+id/txt_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:fontFamily="@font/myriad_pro_semibold"
        android:padding="@dimen/_10sdp"
        android:text="@string/forgot_your_password"
        android:textColor="@color/color_primary"
        android:textSize="@dimen/_15sdp" />

    <TextView
        android:id="@+id/txt_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:fontFamily="@font/myriad_pro_semibold"
        android:padding="@dimen/_10sdp"
        android:text="@string/signup"
        android:textColor="@color/color_primary"
        android:textSize="@dimen/_15sdp" />

</LinearLayout>