<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical"
    tools:context=".activities.SettingsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:background="@color/color_primary">

        <ImageView
            android:id="@+id/back_img"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:padding="@dimen/_7sdp"
            android:src="@drawable/ic_back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/myriad_pro_bold"
            android:text="@string/nav_settings_text"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/enable_notification_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/_12sdp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:text="@string/enable_notifications"
            android:textColor="@color/color_primary"
            android:textSize="@dimen/_15sdp" />
        <CheckBox
            android:id="@+id/notification_chkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_65sdp"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5sp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@android:color/darker_gray" />
    <LinearLayout
        android:id="@+id/about_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/_12sdp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/about_tutornite"
            android:textColor="@color/color_primary"
            android:textSize="@dimen/_15sdp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5sp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:id="@+id/support_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/_12sdp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/help_and_support"
            android:textColor="@color/color_primary"
            android:textSize="@dimen/_15sdp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5sp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@android:color/darker_gray" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/version_txt"
        android:textColor="@color/color_primary"
        android:textSize="@dimen/_15sdp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5sp"
        android:layout_marginTop="@dimen/_25sdp"
        android:background="@android:color/darker_gray" />

</LinearLayout>